// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Table with everything 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <table
      class="BaseTable__StyledTable-sc-10lnp9m-0 cHvXub Table"
    >
      <thead>
        <tr
          class="TableHead__StyledHeaderRow-msr3t5-0 jbkNdg"
        >
          <th
            class="StyledTh-sc-10nzyk9-0 kfgNsH"
            data-testid="table-head"
            scope="col"
            width="30px"
          >
            <div
              class="Box-sc-1qu1edy-0 jlPsmj Checkbox-sc-1nm58f1-2 dQkcBn"
            >
              <label
                class="ClickInputLabel-j2axnv-0 kemUmZ"
              >
                <input
                  aria-invalid="false"
                  aria-label="select all"
                  aria-required="false"
                  class="Checkbox__CheckboxInput-sc-1nm58f1-1 ejYTGD Checkbox-sc-1nm58f1-2 dQkcBn"
                  type="checkbox"
                />
                <div
                  class="Checkbox__VisualCheckbox-sc-1nm58f1-0 kUStCo"
                  data-testid="visual-checkbox"
                />
              </label>
            </div>
          </th>
          <th
            class="StyledTh-sc-10nzyk9-0 kfgNsH"
            data-testid="table-head"
            scope="col"
            width="30px"
          />
          <th
            class="StyledTh-sc-10nzyk9-0 bocKtx"
            data-testid="table-head"
            scope="col"
            width="15%"
          >
            Date
          </th>
          <th
            class="StyledTh-sc-10nzyk9-0 iPIuAn"
            data-testid="table-head"
            scope="col"
            width="20%"
          >
            Expected Quantity
          </th>
          <th
            class="StyledTh-sc-10nzyk9-0 iPIuAn"
            data-testid="table-head"
            scope="col"
            width="20%"
          >
            Actual Quantity
          </th>
          <th
            class="StyledTh-sc-10nzyk9-0 esKZsE"
            data-testid="table-head"
            scope="col"
            width="45%"
          >
            Note
          </th>
          <th
            class="StyledTh-sc-10nzyk9-0 djOqlg"
            data-testid="table-head"
            scope="col"
            width="5%"
          />
        </tr>
      </thead>
      <tbody
        data-testid="table-body"
      >
        <tr
          class="TableBody__StyledTr-sc-1amzhx8-1 jsrSxq"
          data-testid="table-row"
        >
          <td
            colspan="7"
          >
            <div
              class="Box-sc-1qu1edy-0 kOlJoM"
            >
              <p
                class="Text-sc-1wu7vpu-0 iHOIzo"
                color="blackBlue"
                font-size="16px"
                font-weight="bold"
              >
                ABC & XYZ Company
              </p>
            </div>
          </td>
        </tr>
        <tr
          class="TableBody__StyledTr-sc-1amzhx8-1 jsrSxq"
          data-testid="table-row"
        >
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            <div
              class="Box-sc-1qu1edy-0 jlPsmj Checkbox-sc-1nm58f1-2 dQkcBn"
            >
              <label
                class="ClickInputLabel-j2axnv-0 kemUmZ"
              >
                <input
                  aria-invalid="false"
                  aria-label="Select row"
                  aria-required="false"
                  class="Checkbox__CheckboxInput-sc-1nm58f1-1 ejYTGD Checkbox-sc-1nm58f1-2 dQkcBn"
                  type="checkbox"
                />
                <div
                  class="Checkbox__VisualCheckbox-sc-1nm58f1-0 kUStCo"
                  data-testid="visual-checkbox"
                />
              </label>
            </div>
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            <button
              aria-label="Expand row"
              class="ControlIcon__StyledButton-sc-1h83lvi-0 cCdEvo"
            >
              <svg
                aria-hidden="true"
                class="Icon-fc7twp-0 efirdb"
                color="currentColor"
                fill="currentColor"
                focusable="false"
                height="32px"
                icon="downArrow"
                viewBox="0 0 24 24"
                width="32px"
              >
                <path
                  d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                />
              </svg>
            </button>
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            Tue, 01 Oct 2019
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2,025 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            1,800 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          />
          <td>
            <div
              class="Box-sc-1qu1edy-0 gqpebI"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="Open"
                class="IconicButton__WrapperButton-sc-1u3dojp-1 UMPof IconicButton-sc-1u3dojp-2 gZASNp"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="Icon-fc7twp-0 cwKdbD"
                  color="currentColor"
                  fill="currentColor"
                  focusable="false"
                  height="32px"
                  icon="more"
                  p="half"
                  viewBox="0 0 24 24"
                  width="32px"
                >
                  <path
                    d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                  />
                </svg>
              </button>
            </div>
          </td>
        </tr>
        <tr
          class="TableBody__StyledTr-sc-1amzhx8-1 jsrSxq"
          data-testid="table-row"
        >
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            <div
              class="Box-sc-1qu1edy-0 jlPsmj Checkbox-sc-1nm58f1-2 dQkcBn"
            >
              <label
                class="ClickInputLabel-j2axnv-0 kemUmZ"
              >
                <input
                  aria-invalid="false"
                  aria-label="Select row"
                  aria-required="false"
                  class="Checkbox__CheckboxInput-sc-1nm58f1-1 ejYTGD Checkbox-sc-1nm58f1-2 dQkcBn"
                  type="checkbox"
                />
                <div
                  class="Checkbox__VisualCheckbox-sc-1nm58f1-0 kUStCo"
                  data-testid="visual-checkbox"
                />
              </label>
            </div>
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          />
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            Wed, 02 Oct 2019
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2,475 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2,250 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          />
          <td>
            <div
              class="Box-sc-1qu1edy-0 gqpebI"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="Open"
                class="IconicButton__WrapperButton-sc-1u3dojp-1 UMPof IconicButton-sc-1u3dojp-2 gZASNp"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="Icon-fc7twp-0 cwKdbD"
                  color="currentColor"
                  fill="currentColor"
                  focusable="false"
                  height="32px"
                  icon="more"
                  p="half"
                  viewBox="0 0 24 24"
                  width="32px"
                >
                  <path
                    d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                  />
                </svg>
              </button>
            </div>
          </td>
        </tr>
        <tr
          class="TableBody__StyledTr-sc-1amzhx8-1 jsrSxq"
          data-testid="table-row"
        >
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            <div
              class="Box-sc-1qu1edy-0 jlPsmj Checkbox-sc-1nm58f1-2 dQkcBn"
            >
              <label
                class="ClickInputLabel-j2axnv-0 kemUmZ"
              >
                <input
                  aria-invalid="false"
                  aria-label="Select row"
                  aria-required="false"
                  class="Checkbox__CheckboxInput-sc-1nm58f1-1 ejYTGD Checkbox-sc-1nm58f1-2 dQkcBn"
                  type="checkbox"
                />
                <div
                  class="Checkbox__VisualCheckbox-sc-1nm58f1-0 kUStCo"
                  data-testid="visual-checkbox"
                />
              </label>
            </div>
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          />
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            Thu, 03 Oct 2019
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2,475 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            1,425 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          />
          <td>
            <div
              class="Box-sc-1qu1edy-0 gqpebI"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="Open"
                class="IconicButton__WrapperButton-sc-1u3dojp-1 UMPof IconicButton-sc-1u3dojp-2 gZASNp"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="Icon-fc7twp-0 cwKdbD"
                  color="currentColor"
                  fill="currentColor"
                  focusable="false"
                  height="32px"
                  icon="more"
                  p="half"
                  viewBox="0 0 24 24"
                  width="32px"
                >
                  <path
                    d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                  />
                </svg>
              </button>
            </div>
          </td>
        </tr>
        <tr
          class="TableBody__StyledTr-sc-1amzhx8-1 jsrSxq"
          data-testid="table-row"
        >
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            <div
              class="Box-sc-1qu1edy-0 jlPsmj Checkbox-sc-1nm58f1-2 dQkcBn"
            >
              <label
                class="ClickInputLabel-j2axnv-0 kemUmZ"
              >
                <input
                  aria-invalid="false"
                  aria-label="Select row"
                  aria-required="false"
                  class="Checkbox__CheckboxInput-sc-1nm58f1-1 ejYTGD Checkbox-sc-1nm58f1-2 dQkcBn"
                  type="checkbox"
                />
                <div
                  class="Checkbox__VisualCheckbox-sc-1nm58f1-0 kUStCo"
                  data-testid="visual-checkbox"
                />
              </label>
            </div>
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          />
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            Fri, 04 Oct 2019
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2,475 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            675 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            1c Other Plant-related issue, equipment issues
          </td>
          <td>
            <div
              class="Box-sc-1qu1edy-0 gqpebI"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="Open"
                class="IconicButton__WrapperButton-sc-1u3dojp-1 UMPof IconicButton-sc-1u3dojp-2 gZASNp"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="Icon-fc7twp-0 cwKdbD"
                  color="currentColor"
                  fill="currentColor"
                  focusable="false"
                  height="32px"
                  icon="more"
                  p="half"
                  viewBox="0 0 24 24"
                  width="32px"
                >
                  <path
                    d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                  />
                </svg>
              </button>
            </div>
          </td>
        </tr>
      </tbody>
      <tfoot>
        <tr
          class="TableFoot__StyledFooterRow-sc-1q56pdo-0 mxGTg"
        >
          <th
            class="StyledTh-sc-10nzyk9-0 sBlyT"
            colspan="3"
            scope="row"
          >
            Total
          </th>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            18,000 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            7,725 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          />
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          />
        </tr>
        <tr
          class="TableFoot__StyledFooterRow-sc-1q56pdo-0 mxGTg"
        >
          <th
            class="StyledTh-sc-10nzyk9-0 sBlyT"
            colspan="3"
            scope="row"
          >
            Attainment
          </th>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          />
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            41.5%
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          />
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          />
        </tr>
      </tfoot>
    </table>
    <nav
      aria-label="Pagination navigation"
      class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 iCmkqG"
    >
      <button
        aria-label="Go to previous results"
        class="Pagination__PaginationButton-sc-1fsx1pp-0 kZsQns"
        disabled=""
      >
        <svg
          aria-hidden="true"
          class="Icon-fc7twp-0 bLUmHQ"
          color="currentColor"
          fill="currentColor"
          focusable="false"
          height="24px"
          icon="leftArrow"
          ml="-8px"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
          />
        </svg>
         Previous
      </button>
      <button
        aria-current="true"
        class="Pagination__PaginationButton-sc-1fsx1pp-0 Pagination__PageNumber-sc-1fsx1pp-1 khkrHJ"
        disabled=""
      >
        1
      </button>
      <button
        aria-current="false"
        aria-label="Go to page {{count}}"
        class="Pagination__PaginationButton-sc-1fsx1pp-0 Pagination__PageNumber-sc-1fsx1pp-1 bpxFKh"
      >
        2
      </button>
      <button
        aria-current="false"
        aria-label="Go to page {{count}}"
        class="Pagination__PaginationButton-sc-1fsx1pp-0 Pagination__PageNumber-sc-1fsx1pp-1 bpxFKh"
      >
        3
      </button>
      <button
        aria-label="Go to next results"
        class="Pagination__PaginationButton-sc-1fsx1pp-0 iFOkT"
      >
        Next 
        <svg
          aria-hidden="true"
          class="Icon-fc7twp-0 dEtgXr"
          color="currentColor"
          fill="currentColor"
          focusable="false"
          height="24px"
          icon="rightArrow"
          mr="-8px"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
          />
        </svg>
      </button>
    </nav>
  </div>
</div>
`;

exports[`Storyshots Table with pagination 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <table
      class="BaseTable__StyledTable-sc-10lnp9m-0 cHvXub Table"
    >
      <thead>
        <tr
          class="TableHead__StyledHeaderRow-msr3t5-0 jbkNdg"
        >
          <th
            class="StyledTh-sc-10nzyk9-0 sBlyT"
            data-testid="table-head"
            scope="col"
          >
            Date
          </th>
          <th
            class="StyledTh-sc-10nzyk9-0 sBlyT"
            data-testid="table-head"
            scope="col"
          >
            Expected Quantity
          </th>
          <th
            class="StyledTh-sc-10nzyk9-0 sBlyT"
            data-testid="table-head"
            scope="col"
          >
            Actual Quantity
          </th>
        </tr>
      </thead>
      <tbody
        data-testid="table-body"
      >
        <tr
          class="TableBody__StyledTr-sc-1amzhx8-1 jsrSxq"
          data-testid="table-row"
        >
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2019-10-01
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2,025 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            1,800 eaches
          </td>
        </tr>
      </tbody>
      <tfoot />
    </table>
    <nav
      aria-label="Pagination navigation"
      class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 iCmkqG"
    >
      <button
        aria-label="Go to previous results"
        class="Pagination__PaginationButton-sc-1fsx1pp-0 kZsQns"
        disabled=""
      >
        <svg
          aria-hidden="true"
          class="Icon-fc7twp-0 bLUmHQ"
          color="currentColor"
          fill="currentColor"
          focusable="false"
          height="24px"
          icon="leftArrow"
          ml="-8px"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
          />
        </svg>
         Previous
      </button>
      <button
        aria-current="true"
        class="Pagination__PaginationButton-sc-1fsx1pp-0 Pagination__PageNumber-sc-1fsx1pp-1 khkrHJ"
        disabled=""
      >
        1
      </button>
      <button
        aria-current="false"
        aria-label="Go to page {{count}}"
        class="Pagination__PaginationButton-sc-1fsx1pp-0 Pagination__PageNumber-sc-1fsx1pp-1 bpxFKh"
      >
        2
      </button>
      <button
        aria-current="false"
        aria-label="Go to page {{count}}"
        class="Pagination__PaginationButton-sc-1fsx1pp-0 Pagination__PageNumber-sc-1fsx1pp-1 bpxFKh"
      >
        3
      </button>
      <button
        aria-current="false"
        aria-label="Go to page {{count}}"
        class="Pagination__PaginationButton-sc-1fsx1pp-0 Pagination__PageNumber-sc-1fsx1pp-1 bpxFKh"
      >
        4
      </button>
      <button
        aria-current="false"
        aria-label="Go to page {{count}}"
        class="Pagination__PaginationButton-sc-1fsx1pp-0 Pagination__PageNumber-sc-1fsx1pp-1 bpxFKh"
      >
        5
      </button>
      <p
        class="Text-sc-1wu7vpu-0 dqAYor"
        color="currentColor"
        font-size="small"
      >
        ...
      </p>
      <button
        aria-current="false"
        aria-label="Go to page {{count}}"
        class="Pagination__PaginationButton-sc-1fsx1pp-0 Pagination__PageNumber-sc-1fsx1pp-1 bpxFKh"
      >
        8
      </button>
      <button
        aria-label="Go to next results"
        class="Pagination__PaginationButton-sc-1fsx1pp-0 iFOkT"
      >
        Next 
        <svg
          aria-hidden="true"
          class="Icon-fc7twp-0 dEtgXr"
          color="currentColor"
          fill="currentColor"
          focusable="false"
          height="24px"
          icon="rightArrow"
          mr="-8px"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
          />
        </svg>
      </button>
    </nav>
  </div>
</div>
`;
